<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VINO</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">View Logs</string>
    <string name="title_section2">New Entry</string>
    <string name="title_section3">Favorites</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="newEntry_title">Entry Title</string>
    <string name="newEntry_producer">Winemaker*</string>
    <string name="newEntry_varietal">Varietal*</string>
    <string name="newEntry_location">Current Location</string>
    <string name="newEntry_vintage">Vintage Year*</string>
    <string name="newEntry_category">Category (i.e., white, red, etc.)</string>
    <string name="newEntry_region">Region*</string>
    <string name="newEntry_rating">Rate it!</string>
    <string name="newEntry_comment">Comments</string>
    <string name="newEntry_submit">Submit</string>
    <string name="newEntry_wineTitle">Wine Details</string>
    <string name="viewEntry_tutorial">View Tutorial</string>
    <string name="viewEntry_emptyMsg">YOU DON\'T HAVE ANY ENTRIES!</string>
    <string name="title_activity_new_entry">NewEntryActivity</string>
    <string name="title_activity_view_log">ViewLogActivity</string>
    <string name="sweet">Sweet</string>
    <string name="dry">Dry</string>
    <string name="image">Image</string>

</resources>