<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newEntrylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
       android:id="@+id/image"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:adjustViewBounds="true"
       android:scaleType="centerCrop"
       android:alpha=".90"
       android:contentDescription="@string/image" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:padding="5dp"
                    android:ems="13"
                    android:hint="@string/newEntry_title"
                    android:inputType="textCapWords"
                    android:background="#40000000"
                    android:textColorHint="@color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white" >
                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <EditText
                    android:id="@+id/comments"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:gravity="top|left"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:inputType="textCapSentences|textMultiLine"
                    android:background="#40000000"
                    android:maxLength="300"
                    android:hint="@string/newEntry_comment"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </TableRow>

         <!--    <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip" > -->

        <!--         <TextView
                    android:id="@+id/wineTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/newEntry_wineTitle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" /> -->

       <!--      </TableRow> -->

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <AutoCompleteTextView
                    android:id="@+id/producer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/newEntry_producer"
                    android:inputType="textCapWords"
                    android:background="#40000000"
                    android:maxLength="20"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textColorHint="@color/white" >

                    <requestFocus />
                </AutoCompleteTextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <AutoCompleteTextView
                    android:id="@+id/varietal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/newEntry_varietal"
                    android:background="#40000000"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:inputType="textCapWords" >
                    <requestFocus />
                </AutoCompleteTextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <AutoCompleteTextView
                    android:id="@+id/region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:padding="5dp"                   
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/newEntry_region"
                    android:inputType="textCapWords"
                    android:background="#40000000"
                    android:textColorHint="@color/white"
                    android:textStyle="bold"
                    android:textColor="@color/white" >
                    <requestFocus />
                </AutoCompleteTextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

              <EditText
                    android:id="@+id/vintageYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:padding="5dp"                   
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/newEntry_vintage"
                    android:inputType="number"
                    android:background="#40000000"
                    android:textColorHint="@color/white"
                    android:maxLength="4"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <AutoCompleteTextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/newEntry_category"
                    android:background="#40000000"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:inputType="textCapWords" >
                    <requestFocus />
                </AutoCompleteTextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="#40000000"
                android:orientation="horizontal" >
                
                <LinearLayout
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/dryCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:hint="@string/dry"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                        android:textColorHint="@color/white" />

                    <CheckBox
                        android:id="@+id/sweetCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/sweet"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                        android:textColorHint="@color/white" />
                </LinearLayout>
            </TableRow>

<!--             <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip" > -->

                <TextView
                    android:id="@+id/ratingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/newEntry_rating"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

<!--             </TableRow> -->

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <RatingBar
                    android:id="@+id/rating"
                    style="@style/wineRatingBarPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="145dp"
                    android:layout_marginRight="145dp"
                    android:layout_marginTop="0dp"
                    android:max="5"
                    android:numStars="5"
                    android:rating="0.0"
                    android:stepSize="0.5" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/new_entry_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/newEntry_submit" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>
